--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,25 @@
+keyboard-cc-antix (0.2.2) unstable; urgency=low 
+
+  * Updated Catalan, German, Spanish, Italian and Swedish
+
+ -- anticapitalista <antiX@operamail.com>  Mon, 29 Jun 2015 14:00:00 +0200
+
+
+keyboard-cc-antix (0.2.1) unstable; urgency=low 
+
+  * Updated translations
+
+ -- anticapitalista <antiX@operamail.com>  Fri, 26 Jun 2015 15:53:00 +0200
+
+
+keyboard-cc-antix (0.2.0) unstable; urgency=low 
+
+  * Added Swedish
+  * Updated translations
+
+ -- anticapitalista <antiX@operamail.com>  Wed, 24 Jun 2015 23:43:00 +0200
+
+
 keyboard-cc-antix (0.1.9) unstable; urgency=low 
 
   * Removed hard-coded 'British' - Changed to 'No Change'
